# CGDK10.Cpp

./: CGDK10.build,network.NET.core.AnyCPU.Debug.vs16.bat  CGDK10.build,network.NET.core.AnyCPU.Release.vs16.bat  CGDK10.build,network.NET.core.AnyCPU.vs16.bat  CGDK10.build,network.NET.core.v16.bat  CGDK10.build,network.NET.core.x64.Debug.vs16.bat  CGDK10.build,network.NET.core.x64.Release.vs16.bat  CGDK10.build,network.NET.core.x64.vs16.bat  CGDK10.build,network.NET.framework.AnyCPU.Debug.vs16.bat  CGDK10.build,network.NET.framework.AnyCPU.Release.vs16.bat  CGDK10.build,network.NET.framework.AnyCPU.vs16.bat  CGDK10.build,network.NET.framework.v16.bat  CGDK10.build,network.NET.framework.x64.Debug.vs16.bat  CGDK10.build,network.NET.framework.x64.Release.vs16.bat  CGDK10.build,network.NET.framework.x64.vs16.bat  CMakeLists.txt  LICENSE  README.md  build.Debug.bat  build.Release.bat  build.Release.sh  build._NDI.windows.vs17.Debug.bat  build._NDI.windows.vs17.Release.bat  build._NDI.windows.vs17.bat  build.bat  build.lib.windows.Debug.vs17.bat  build.lib.windows.Release.vs17.bat  build.lib.windows.vs17.bat  build.sh  build.windows.Debug.vs17.bat  build.windows.Release.vs17.bat  build.windows.vs17.bat  clean_up.bat  compile_setup.txt  copy_dll_files_NET.core3.1_AnyCPU_Release_to_bin.bat  copy_dll_files_NET.core3.1_AnyCPU_debug_to_bin.bat  copy_dll_files_NET.core3.1_x64_Debug_to_bin.bat  copy_dll_files_NET.core3.1_x64_Release_to_bin.bat  copy_dll_files_NET.framework_AnyCPU_Release_to_bin.bat  copy_dll_files_NET.framework_AnyCPU_debug_to_bin.bat  copy_dll_files_NET.framework_x64_Debug_to_bin.bat  (+18 more)
examples/: CMakeLists.txt  _build.windows.vs17.bat  build.bat  build.windows.debug.vs17.bat  build.windows.release.vs17.bat  build.windows.vs17.bat  rebuild.bat  rebuild.sh  rebuild.windows.debug.vs17.bat  rebuild.windows.release.vs17.bat  rebuild.windows.vs17.bat
examples/1.1.tcp_echo/: CGDK10.tcp_echo_client.vs17.sln  CGDK10.tcp_echo_server.vs17.sln  CMakeLists.txt
examples/1.1.tcp_echo/client/: CMakeLists.txt
examples/1.1.tcp_echo/server/: CMakeLists.txt
examples/1.2.tcp_relay_echo/: CGDK10.tcp_relay_echo.client.vs17.sln  CGDK10.tcp_relay_echo.server.vs17.sln  CMakeLists.txt
examples/1.2.tcp_relay_echo/client/: CMakeLists.txt
examples/1.2.tcp_relay_echo/server/: CMakeLists.txt
examples/1.3.tcp_multicast_echo/: CGDK10.tcp_multicast_echo.client.vs17.sln  CGDK10.tcp_multicast_echo.server.vs17.sln  CMakeLists.txt
examples/1.3.tcp_multicast_echo/client/: CMakeLists.txt
examples/1.3.tcp_multicast_echo/server/: CMakeLists.txt
examples/1.tcp_echo/: example.tcp_echo.client.sln  example.tcp_echo.server.sln
examples/2.1.chatting_simple/: CGDK10.chatting.client.vs17.sln  CGDK10.chatting.server.vs17.sln  CMakeLists.txt
examples/2.1.chatting_simple/client/: CMakeLists.txt
examples/2.1.chatting_simple/common/: common.vcxitems  definition_message.h  definitions.h
examples/2.1.chatting_simple/server/: CMakeLists.txt
examples/7.1.update_service/: CGDK10.update_service.client.vs17.sln  CGDK10.update_service.server.vs17.sln  CMakeLists.txt  define_message.h
examples/7.1.update_service/client.console/: CGDK10.update_service.client.console.cpp  CGDK10.update_service.client.console.vs17.vcxproj  CGDK10.update_service.client.console.vs17.vcxproj.filters  CMakeLists.txt  socket_tcp.cpp  socket_tcp.h
examples/7.1.update_service/server/: CMakeLists.txt
tutorials/: CMakeLists.txt  README.txt  _build.windows.vs17.bat  build.Debug.sh  build.bat  build.debug.bat  build.release.bat  clean_up.bat  rebuild.Debug.bat  rebuild.Release.bat  rebuild.bat
tutorials/Common.2.buffer/: tutorial.buffer.NET.core.vs16.sln
tutorials/Common.2.buffer/buffer.01.basic/: Program.cs  tutorial.buffer.01.basic.NET.core.csproj
tutorials/Common.2.buffer/buffer.02.append_extract/: Program.cs  tutorial.buffer.02.append_extract.NET.core.csproj
tutorials/Common.2.buffer/buffer.03.struct_serialize/: Program.cs  tutorial.buffer.03.struct_serialize.NET.core.csproj
tutorials/Common.2.buffer/buffer.04.class_serialize/: Program.cs  tutorial.buffer.04.class_serialize.NET.core.csproj
tutorials/common.1.object/: CGDK10.tutorial.object.windows.vs17.sln  CMakeLists.txt  tutorial.object.NET.core.vs16.sln
tutorials/common.2.buffer/: CGDK10.tutorial.buffer.windows.vs17.sln  CMakeLists.txt
tutorials/common.3.execute/: CGDK10.tutorial.execute.windows.vs17.sln  CMakeLists.txt  tutorial.execute.NET.core.vs16.sln
tutorials/network.1.socket/: CGDK10.tutorial.socket.client.windows.vs17.sln  CGDK10.tutorial.socket.server.windows.vs17.sln  CMakeLists.txt  define_message.h  tutorial.network.socket.client.NET.core.vs16.sln  tutorial.network.socket.server.NET.core.vs16.sln
tutorials/network.2.p2p/: CMakeLists.txt
tutorials/network.3.update/: CMakeLists.txt  tutorial.network.update_client.windows.vs17.sln  tutorial.network.update_server.windows.vs17.sln
tutorials/server.1.log/: CGDK10.tutorial.server.log.windows.vs17.sln  CMakeLists.txt  tutorial.server.log.NET.core.sln
tutorials/server.2.group/: CGDK10.tutorial.server.group.client.windows.vs17.sln  CGDK10.tutorial.server.group.server.windows.vs17.sln  CMakeLists.txt  define_message.h  tutorial.server.group.client.NET.core.vs16.sln  tutorial.server.group.server.NET.core.vs16.sln
tutorials/server.3.service/: CGDK10.tutorial.server.service.windows.vs17.sln  CMakeLists.txt  tutorial.service.NET.core.vs16.sln
tutorials/server.4.time_event/: CGDK10.time_event.pptx  CGDK10.tutorial.server.time_event.windows.vs17.sln  CMakeLists.txt  tutorial.time_event.NET.core.sln
tutorials/server.5.query/: CGDK10.query.01.db.pptx  CGDK10.query.02.redis.pptx  CGDK10.query.03.http.pptx  CGDK10.tutorial.query.windows.vs17.sln  CMakeLists.txt
tutorials/server.6.http_api/: CMakeLists.txt
tutorials/server.7.doss/: CGDK10.tutorial.doss.client.windows.vs17.sln  CGDK10.tutorial.doss.server.session.windows.vs17.sln  CGDK10.tutorial.doss.server.storage.windows.vs17.sln  CMakeLists.txt
tutorials/server.8.web_server/: CGDK10.tutorial.server.web_server.windows.vs17.sln  CMakeLists.txt
(+2111 files in other folders)
